filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser:v2.41.0
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "400m"
            memory: "500Mi"
          requests:
            cpu: "100m"
            memory: "250Mi"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: fb-config
          mountPath: /config
        - name: fb-db
          mountPath: /database
        - name: fb-storage
          mountPath: /srv
      volumes:
      - name: fb-config
        persistentVolumeClaim:
          claimName: fb-config-pvc
      - name: fb-db
        persistentVolumeClaim:
          claimName: fb-db-pvc
      - name: fb-storage
        persistentVolumeClaim:
          claimName: fb-storage-pvc
