filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  ports:
    - port: 10800
      targetPort: 80
